@@ -1,5 +1,6 @@
 Version 2.02.00 - 
 ===================================
+  Simplify dev_manager_info().
   Attempt to load missing targets using modprobe.
   Add -a to lvscan.
   Move mknodes into libdevmapper.
